# buildables

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
buildables/week1_project/text_analysis_tool/: main.py  pyproject.toml  streamlit_app.py
buildables/week1_project/text_analysis_tool/data/: news_article.txt  reddit_post.txt
buildables/week1_project/text_analysis_tool/tests/: test_main.py
src/travel_agent/: __init__.py  main.py
src/travel_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/travel_agent/agents/: __init__.py  langchain_agent.py
src/travel_agent/agents/tools/: __init__.py  google_places_tool.py  intent_extractor_tool.py  tavily_tool.py  translation_tool.py
src/travel_agent/app/: __init__.py  config.py
src/travel_agent/mcp_services/: __init__.py  google_places.py  intent_extractor.py  tavily.py  translation.py
src/travel_agent/models/: chat.py  places.py
src/travel_agent/routers/: agent.py  health.py
src/travel_agent/services/: distance_matrix.py  google_places.py  intent_extractor.py  tavily.py  translation.py
src/travel_agent/utils/: exceptions.py  intent_context.py  logger.py  mcp_loader.py
week1_project/text_analysis_tool/: README.md  config.py  requirements.txt  streamlit_app.py
week1_project/text_analysis_tool/tests/: test_main.py
week1_project/text_analysis_tool/utils/: analysis_feature.py  llm_helpers.py
week2_project/: .gitignore
week2_project/multirole_chatbot/: README.md  chat_core.py  config.py  pyproject.toml  terminal_chatbot.py  web_app.py
week2_project/multirole_chatbot/prompts/: technical_expert.txt
week2_project/multirole_chatbot/utils/: chat_models.py
week3_project/: Advance_Prompting.ipynb  README.md
week3_project/advance_prompting/: main.py  pyproject.toml
week4_project/project/: README.md  article.txt  observations.md  summarizer.py
week5_project/personal_assistant/: requirements.txt
week5_project/personal_assistant/src/: __init__.py
week5_project/project/: README.md  app.py  pyproject.toml  reflection_agent.py  reflection_chains.py  workflow_backend.py
week9-10_project/research-assistant/: pyproject.toml  week1_setup.ipynb
week9-10_project/research-assistant/src/: __init__.py  config.py
week9-10_project/research-assistant/src/routers/: ping.py
