[project]
name = "text-analysis-tool"
version = "1.0.0"
description = "A comprehensive text analysis tool with summarization, cost estimation, and performance benchmarking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Haroon Ahmad", email = "haroonahmad13055@hmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing"
]
dependencies = [
    "streamlit>=1.25.0",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "nltk>=3.8.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "torch>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[project.urls]
##will update